--- a/views/base.html
+++ b/views/base.html
@@ -10,7 +10,7 @@
       <nav>
         <a href="/borze/">Borze</a>
         <a href="/sektorji/">Sektorji</a>
-        <a href="/delnice/"> Top delnice</a>
+        <a href="/topdelnice/"> Top delnice</a>
         <a href="/prijava/">Prijava</a>
         <a href="/registracija/">Registracija</a>
       </nav>
