--- a/views/borze.html
+++ b/views/borze.html
@@ -9,7 +9,7 @@
 </tr>
 % for oznaka, ime, regija, in borze:
 <tr>
-    <th href='/borze/<oznaka>'>{{oznaka}}</th>
+    <th><a href="/borze/{{oznaka}}">{{oznaka}}</th>
     <th>{{ime}}</th>
     <th>{{regija}}</th>
 </tr>
