--- a/views/sektor_podrobno.html
+++ b/views/sektor_podrobno.html
@@ -1,22 +1,22 @@
 % rebase base.html
 
-<h1>Vse delnice, ki so na borzi {{oznaka}}:
+<h1>Vse delnice, ki so na iz sektroja {{oznaka}}:
 <table cellpadding="0" cellspacing="0" border="1">
 <tr>
     <th>Oznaka</th>
     <th>Ime</th>
     <th>Cena v EUR</th>
-    <th>Sektor</th>
+    <th>Borza</th>
     <th>Količina</th>
 </tr>
-%for oznaka, ime, cena, sektor, kolicina in delnice:
+%for oznaka, ime, cena, borza, kolicina in sektor:
 <tr>
     <th>{{oznaka}}</th>
     <th>{{ime}}</th>
     <th>{{cena}}</th>
-    <th>{{sektor}}</th>
+    <th>{{borza}}</th>
     <th>{{kolicina}}</th>
 </tr>
 %end
 </table>
-<h2> Skupna vrednost vseh delnic na tej borzi je {{vrednost}} EUR.</h2>
+<h1> Skupna vrednost vseh delnic v tem sektorju je {{vrednost}} EUR.</h1>
