--- a/views/borze_podrobno.html
+++ b/views/borze_podrobno.html
@@ -1,4 +1,33 @@
-% rebase base.html
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <link rel="stylesheet" type="text/css"  href="/static/main.css">
+    <meta charset='utf8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <header id='header'>
+      <a class="logo" href='/zacetna_stran/'>Domov</a>
+      <nav>
+        <a href="/borze/">Borze</a>
+        <a href="/sektorji/">Sektorji</a>
+        <a href="/topdelnice/"> Top delnice</a>
+        %if stanje == 0:
+        <a href="/prijava/">Prijava</a>
+        <a href="/registracija/">Registracija</a>
+        %end 
+        %if stanje != 0:
+        <a href="/odjava/">Odjava</a>
+        %end
+    </nav>
+      </header>
+    </div>
+    </head>
+
+    <body>
+      <link rel="stylesheet" type="text/css"  href="/static/main.css">
+ 
+    </body>
+
 
 <h1>Vse delnice, ki so na borzi {{oznaka}}:
 <table cellpadding="0" cellspacing="0" border="1">
@@ -20,3 +49,4 @@
 %end
 </table>
 <h2> Skupna vrednost vseh delnic na tej borzi je {{vrednost}} EUR.</h2>
+</html>
