--- a/views/borze_podrobno.html
+++ b/views/borze_podrobno.html
@@ -16,6 +16,7 @@
         <a href="/registracija/">Registracija</a>
         %end 
         %if stanje != 0:
+        <a href="/uporabnik/{{stanje}}">Moj profil</a>
         <a href="/odjava/">Odjava</a>
         %end
     </nav>
@@ -25,11 +26,7 @@
 
     <body>
       <link rel="stylesheet" type="text/css"  href="/static/main.css">
- 
-    </body>
-
-
-<h1>Vse delnice, ki so na borzi {{oznaka}}:
+ <h1>Vse delnice, ki so na borzi {{oznaka}}:
 <table cellpadding="0" cellspacing="0" border="1">
 <tr>
     <th>Oznaka</th>
@@ -49,4 +46,17 @@
 %end
 </table>
 <h2> Skupna vrednost vseh delnic na tej borzi je {{vrednost}} EUR.</h2>
+<footer id = "footer">
+  <div class="inner">
+    <div class="content">
+    <section> Random1</section>
+    <section> random2</section>
+    <section> ranom3 </section>
+    </div>
+  </div>
+    </body>
+
+
+
+</footer>
 </html>
