--- a/views/prijava.html
+++ b/views/prijava.html
@@ -16,6 +16,7 @@
         <a href="/registracija/">Registracija</a>
         %end 
         %if stanje != 0:
+        <a href="/uporabnik/{{stanje}}">Moj profil</a>
         <a href="/odjava/">Odjava</a>
         %end
       </nav>
@@ -25,9 +26,6 @@
 
     <body>
       <link rel="stylesheet" type="text/css"  href="/static/main.css">
-
-    </body>
-
 
 <div align="center">
 <form action='/prijava/' class="form-signin text-center" method='post' style="width: 30%;margin-top: 5cm">
@@ -43,4 +41,16 @@
     %end    
 </form>
 </div>
+    </body>
+
+
+<footer id = "footer">
+  <div class="inner">
+    <div class="content">
+    <section> Random1</section>
+    <section> random2</section>
+    <section> ranom3 </section>
+    </div>
+  </div>
+</footer>
 </html>
