--- a/views/base.html
+++ b/views/base.html
@@ -11,15 +11,26 @@
         <a href="/borze/">Borze</a>
         <a href="/sektorji/">Sektorji</a>
         <a href="/topdelnice/"> Top delnice</a>
+        %if stanje == 0:
         <a href="/prijava/">Prijava</a>
         <a href="/registracija/">Registracija</a>
+        %end 
+        %if stanje != 0:
+        <a href="/uporabnik/{{stanje}}">Moj profil</a>
+        <a href="/odjava/">Odjava</a>
+        %end
       </nav>
       </header>
     </div>
     </head>
 
-    <body>
-      <link rel="stylesheet" type="text/css"  href="/static/main.css">
-    {{!base}}
-    </body>
+<footer id = "footer">
+  <div class="inner">
+    <div class="content">
+    <section> Random1</section>
+    <section> random2</section>
+    <section> ranom3 </section>
+    </div>
+  </div>
+</footer>
 </html>
