--- a/views/borze_podrobno.html
+++ b/views/borze_podrobno.html
@@ -16,7 +16,7 @@
         <a href="/registracija/">Registracija</a>
         %end 
         %if stanje != 0:
-        <a href="/uporabnik/{{stanje}}">Moj profil</a>
+        <a href="/uporabnik/{{stanje}}/">Moj profil</a>
         <a href="/odjava/">Odjava</a>
         %end
     </nav>
@@ -27,24 +27,35 @@
     <body>
       <link rel="stylesheet" type="text/css"  href="/static/main.css">
  <h1>Vse delnice, ki so na borzi {{oznaka}}:
+
 <table cellpadding="0" cellspacing="0" border="1">
+
 <tr>
     <th>Oznaka</th>
     <th>Ime</th>
-    <th>Cena v EUR</th>
+    <th>Cena</th>
     <th>Sektor</th>
     <th>Količina</th>
+    %if stanje != 0:
+    <th> Prodaj ali kupi delnico </th>
+    %end
 </tr>
+
 %for oznaka, ime, cena, sektor, kolicina in delnice:
 <tr>
     <th>{{oznaka}}</th>
     <th>{{ime}}</th>
-    <th>{{cena}}</th>
-    <th>{{sektor}}</th>
+    <th>{{cena}} EUR</th>
+    <th><a href="/sektorji/{{sektor}}">{{sektor}}</a></th>
     <th>{{kolicina}}</th>
+    %if stanje != 0:
+    <th><a href="/uporabnik/{{stanje}}/trgovanje/{{oznaka}}/">Kupi/Prodaj</a></th>
+    %end
 </tr>
+
 %end
 </table>
+
 <h2> Skupna vrednost vseh delnic na tej borzi je {{vrednost}} EUR.</h2>
 <footer id = "footer">
   <div class="inner">
