--- a/views/delnice.html
+++ b/views/delnice.html
@@ -23,32 +23,46 @@
       </header>
     </div>
     </head>
-
-    <body>
-      <link rel="stylesheet" type="text/css"  href="/static/main.css">
-<table cellpadding="0" cellspacing="0" border="1">
+<body>
+<h1> V lasti imate naslednje delnice:</h1>
+<table>
+    <tr>
+        <th> Oznaka </th>
+        <th> Kolicina</th>
+        <th> Prodaj/Kupi </th>
+    <tr>
+%for oznaka,kolicina in delnice:
 <tr>
-    <th>Oznaka</th>
-    <th>Ime</th>
-    <th>Regija</th>
-</tr>
-% for oznaka, ime, regija, in borze:
-<tr>
-    <th><a href="/borze/{{oznaka}}">{{oznaka}}</th>
-    <th>{{ime}}</th>
-    <th>{{regija}}</th>
-</tr>
+    <th>{{oznaka}}</th>
+    <th>{{kolicina}}</th>
+    <th><a href="/uporabnik/{{stanje}}/trgovanje/{{oznaka}}/">Kupi/Prodaj<a></th>
 %end
 </table>
-<footer id = "footer">
-  <div class="inner">
-    <div class="content">
-    <section> Random1</section>
-    <section> random2</section>
-    <section> ranom3 </section>
-    </div>
-  </div>
-    </body>
+<h4> Te delnice so skupno vredne {{vrednost_portfelja}} EUR.</h4>
+<h2> Na voljo so še ostale delnice </h2>
+<table>
+  <tr>
+    <th>Oznaka</th>
+    <th>Ime</th>
+    <th>Cena</th>
+    <th>Borza</th>
+    <th>Sektor</th>
+    <th>Kolicina</th>
+    <th>Izvedi nakup/prodajo</th>
+  </tr>
+%for oznaka,ime,cena,borza,sektor,kolicina in vse:
+  <tr>
+    <th>{{oznaka}}</th>
+    <th>{{ime}}</th>
+    <th>{{cena}} EUR</th>
+    <th><a href="/borze/{{borza}}">{{borza}}</a></th>
+    <th><a href="/sektorji/{{sektor}}">{{sektor}}</a></th>
+    <th>{{kolicina}}</th>
+    <th><a href="/uporabnik/{{stanje}}/trgovanje/{{oznaka}}/">Kupi/Prodaj</a></th>
+  </tr>
+%end
+</table>
+</body>
 
 <footer id = "footer">
   <div class="inner">
@@ -58,11 +72,6 @@
     <section> ranom3 </section>
     </div>
   </div>
-    </body>
-
-
-
 </footer>
-
-
+</html>
 </html>
