--- a/views/denar.html
+++ b/views/denar.html
@@ -1,1 +1,82 @@
-dela
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <link rel="stylesheet" type="text/css"  href="/static/main.css">
+    <meta charset='utf8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <header id='header'>
+      <a class="logo" href='/zacetna_stran/'>Domov</a>
+      <nav>
+        <a href="/borze/">Borze</a>
+        <a href="/sektorji/">Sektorji</a>
+        <a href="/topdelnice/"> Top delnice</a>
+        %if stanje == 0:
+        <a href="/prijava/">Prijava</a>
+        <a href="/registracija/">Registracija</a>
+        %end 
+        %if stanje != 0:
+        <a href="/uporabnik/{{stanje}}/">Moj profil</a>
+        <a href="/odjava/">Odjava</a>
+        %end
+      </nav>
+      </header>
+    </div>
+    </head>
+<body>
+<h4> Trenutno stanje na računu je {{vrednost}} EUR </h4>
+% if napaka == 2:
+    <h3> Izpolnite vsaj en obrazec v ustrezni obliki </h3>
+%end
+%if napaka == 4:
+<h3> Želeli ste dvigniti {{-prob}} EUR preveč. Prodajte delnice in poiskusite znova.</h3>
+%end
+<form action="/uporabnik/{{stanje}}/denar/" class="form text-center" method="POST" style="width: 30%;margin-top: 5cm">
+<div  class="center">
+    <div align="left">
+    <div class="h3 mb-3 font-weight-normal">
+    <span>Količina dviga</span>
+    <br>
+    <input name='kolicina1' type='integer' value = '0'/> EUR
+    <br>
+    
+    </div>
+    </div>
+
+</div>
+<div align='right'>
+<div class="h3 mb-3 font-weight-normal">
+<span> Količina pologa</span>
+<br>
+<input name='kolicina2' type='integer' value = '0' /> EUR
+<br>
+</div>
+</div>
+<div align ="center">
+
+%if napaka == 1:
+<h5> Geslo ni pravilo </h5>
+%end
+<span>Geslo:</span>
+<input name='geslo' type='password' />
+<input type='submit'  value='Potrdi'/>
+
+</div>
+</div>
+</form>
+
+
+
+
+</body>
+
+<footer id = "footer">
+  <div class="inner">
+    <div class="content">
+    <section> Random1</section>
+    <section> random2</section>
+    <section> ranom3 </section>
+    </div>
+  </div>
+</footer>
+</html>
