--- a/views/sektor_podrobno.html
+++ b/views/sektor_podrobno.html
@@ -16,7 +16,7 @@
         <a href="/registracija/">Registracija</a>
         %end 
         %if stanje != 0:
-        <a href="/uporabnik/{{stanje}}">Moj profil</a>
+        <a href="/uporabnik/{{stanje}}/">Moj profil</a>
         <a href="/odjava/">Odjava</a>
         %end
       </nav>
@@ -35,14 +35,20 @@
     <th>Cena v EUR</th>
     <th>Borza</th>
     <th>Količina</th>
+    %if stanje != 0:
+    <th> Kupi ali prodaj delnico </th>
+    %end
 </tr>
 %for oznaka, ime, cena, borza, kolicina in sektor:
 <tr>
     <th>{{oznaka}}</th>
     <th>{{ime}}</th>
     <th>{{cena}}</th>
-    <th>{{borza}}</th>
+    <th><a href="/borze/{{borza}}">{{borza}}</a></th>
     <th>{{kolicina}}</th>
+    %if stanje != 0:
+    <th><a href="/uporabnik/{{stanje}}/trgovanje/{{oznaka}}/">Kupi/Prodaj</a></th>
+    %end
 </tr>
 %end
 </table>
