--- a/views/zacetna_stran.html
+++ b/views/zacetna_stran.html
@@ -16,7 +16,7 @@
         <a href="/registracija/">Registracija</a>
         %end 
         %if stanje != 0:
-        <a href="/uporabnik/{{stanje}}">Moj profil</a>
+        <a href="/uporabnik/{{stanje}}/">Moj profil</a>
         <a href="/odjava/">Odjava</a>
         %end
       </nav>
