--- a/views/sektor_podrobno.html
+++ b/views/sektor_podrobno.html
@@ -27,7 +27,7 @@
     <body>
       <link rel="stylesheet" type="text/css"  href="/static/main.css">
 
-<h1>Vse delnice, ki so na iz sektroja {{oznaka}}:
+<h1>Vse delnice, ki so na iz sektorja {{oznaka}}:
 <table cellpadding="0" cellspacing="0" border="1">
 <tr>
     <th>Oznaka</th>
