--- a/views/sektorji.html
+++ b/views/sektorji.html
@@ -31,7 +31,7 @@
 <table cellpadding="0" cellspacing="0" border="1">
 <tr>
     <th>Ime sektorja</th>
-    <th>Vrednost v milijardah EUR</th>
+    <th>Opis panoge</th>
 </tr>
 % for oznaka, ime,cena in sektorji:
 <tr>
