--- a/views/prijava.html
+++ b/views/prijava.html
@@ -47,9 +47,12 @@
 <footer id = "footer">
   <div class="inner">
     <div class="content">
-    <section> Random1</section>
-    <section> random2</section>
-    <section> ranom3 </section>
+    <section> <h3>M. Gandhi:</h3>
+    <h5>Stonks go up and down </h5></section>
+    <section> <h3>A. Einstein</h3>
+    <h5>Don't be an idiot, put all money into stonks.</h5></section>
+    <section> <h3>Everyone before 2008</h3>
+    <h5>Housing market can not fail, are you crazy?</h5> </section>
     </div>
   </div>
 </footer>
