--- a/views/operacija.html
+++ b/views/operacija.html
@@ -30,7 +30,7 @@
 <div align='center'>
 <form action="/uporabnik/{{stanje}}/trgovanje/{{oznaka}}/" method="post" style="width: 30%;margin-top: 5cm">
 %if napaka == 1:
-    <h3>Neveljaven vnos žejene količine delnic</h3>
+    <h3>Neveljaven vnos željene količine delnic</h3>
 %end
 %if napaka == 3:
     <h3> Na enkrat ni mogoče izvesti nakupa in prodaje iste delnice. </h3>
