--- a/views/registracija.html
+++ b/views/registracija.html
@@ -27,7 +27,7 @@
     <body>
       <link rel="stylesheet" type="text/css"  href="/static/main.css">
 <div align="center">
-<h1> Še danes se pridružite buržoaziji in v enem tednu začnite živeti življenje, kot si ga zaslužite.</h1>
+<h1> Še danes začnite s trgovanjem in začnite živeti življenje, kot si ga zaslužite.</h1>
 <form action='/registracija/' class="form-signin text-center" method='post' style="width: 30%;margin-top: 5cm">
     <div class="h3 mb-3 font-weight-normal">
     <span>Ime:</span><input name='ime' type='text' />
