--- a/views/zacetna_stran.html
+++ b/views/zacetna_stran.html
@@ -31,8 +31,9 @@
 <section id="banner">
 <div class="inner">
     <h1>Zelo dobra borza</h1>
-    <p>Naša borza je zelo dobra in vsi ki tu trgujejo, zaslužijo veliko denarja. Če pa se najde kdo, ki je izgubil vse, je pa to njegova osebna krivda.</p>
-    <a href='/registracija/'><button>Pridruži se buržoaziji</button></a>
+    <p>Naša borza je zelo dobra in vsi ki tu trgujejo, zaslužijo veliko denarja. <br /> 
+      Če pa se najde kdo, ki je izgubil vse, je pa to njegova osebna krivda.</p>
+    <a href='/registracija/'><button>Odpri račun</button></a>
 </div>
 
     </body>
