--- a/views/borze_podrobno.html
+++ b/views/borze_podrobno.html
@@ -37,7 +37,7 @@
     <th>Sektor</th>
     <th>Količina</th>
     %if stanje != 0:
-    <th> Prodaj ali kupi delnico </th>
+    <th> Kupi ali prodaj delnico </th>
     %end
 </tr>
 
