--- a/views/delnice.html
+++ b/views/delnice.html
@@ -67,13 +67,14 @@
 <footer id = "footer">
   <div class="inner">
     <div class="content">
-    <section> <h3>M. Gandhi:</h3>
-    <h5>Stonks go up and down </h5></section>
-    <section> <h3>A. Einstein</h3>
-    <h5>Don't be an idiot, put all money into stonks.</h5></section>
-    <section> <h3>Everyone before 2008</h3>
-    <h5>Housing market can not fail, are you crazy?</h5> </section>
+    <section> <h3>W. Feather:</h3>
+    <h5>Buy stocks as you would groceries: <br /> when they are on sale </h5></section>
+    <section> <h3>W. Buffet</h3>
+    <h5>Risk comes from not knowing what you're doing</h5></section>
+    <section> <h3>C. Munger</h3>
+    <h5>If people weren't wrong so often, we would't be so rich</h5> </section>
     </div>
   </div>
 </footer>
+
 </html>
