--- a/views/delnice.html
+++ b/views/delnice.html
@@ -67,12 +67,12 @@
 <footer id = "footer">
   <div class="inner">
     <div class="content">
-    <section> <h3>W. Feather:</h3>
-    <h5>Buy stocks as you would groceries: <br /> when they are on sale </h5></section>
-    <section> <h3>W. Buffet</h3>
-    <h5>Risk comes from not knowing what you're doing</h5></section>
-    <section> <h3>C. Munger</h3>
-    <h5>If people weren't wrong so often, we would't be so rich</h5> </section>
+      <section align = center> <h3>W. Feather:</h3>
+      <h5>Buy stocks as you would groceries: <br /> when they are on sale </h5></section>
+      <section align = center> <h3>W. Buffet</h3>
+      <h5>Risk comes from not knowing what you're doing</h5></section>
+      <section align = center> <h3>C. Munger</h3>
+      <h5>If people weren't wrong so often, we would't be so rich</h5> </section>
     </div>
   </div>
 </footer>
