--- a/views/topdelnice.html
+++ b/views/topdelnice.html
@@ -28,7 +28,7 @@
       <link rel="stylesheet" type="text/css"  href="/static/main.css">
 
 
-<h1> Top 20 delnic na voljo</h1>
+<h1 align = center> Top 20 delnic na voljo</h1>
 <table cellpadding="0" cellspacing="0" border="1">
 <tr>
     <th>Oznaka</th>
