--- a/views/delnice.html
+++ b/views/delnice.html
@@ -29,7 +29,7 @@
     <tr>
         <th> Oznaka </th>
         <th> Kolicina</th>
-        <th> Prodaj/Kupi </th>
+        <th> Kupi/Prodaj </th>
     <tr>
 %for oznaka,kolicina in delnice:
 <tr>
@@ -48,7 +48,7 @@
     <th>Borza</th>
     <th>Sektor</th>
     <th>Kolicina</th>
-    <th>Izvedi nakup/prodajo</th>
+    <th>Kupi/Prodaj</th>
   </tr>
 %for oznaka,ime,cena,borza,sektor,kolicina in vse:
   <tr>
