--- a/views/sektor_podrobno.html
+++ b/views/sektor_podrobno.html
@@ -36,7 +36,7 @@
     <th>Borza</th>
     <th>Količina</th>
     %if stanje != 0:
-    <th> Kupi ali prodaj delnico </th>
+    <th> Kupi ali prodaj delnice </th>
     %end
 </tr>
 %for oznaka, ime, cena, borza, kolicina in sektor:
