--- a/views/prijava.html
+++ b/views/prijava.html
@@ -37,7 +37,7 @@
     <input value='Prijava' type='submit' />
     </div>
     %if napaka == 1:
-    <h3> Napačen elektronski naslov ali geslo, poiskusite še enkrat</h3>
+    <h3> <b>Napačen elektronski naslov ali geslo, poiskusite še enkrat</b></h3>
     %end    
 </form>
 </div>
