--- a/views/topdelnice.html
+++ b/views/topdelnice.html
@@ -38,7 +38,7 @@
     <th>Sektor</th>
     <th>Kolicina</th>
     %if stanje != 0:
-    <th> Kupi ali prodaj delnico</th>
+    <th> Kupi ali prodaj delnice</th>
     %end
 </tr>
 %for oznaka,ime,cena,borza,sektor,kolicina in delnice:
