--- a/views/uporabnik.html
+++ b/views/uporabnik.html
@@ -30,12 +30,20 @@
 <div class="highlights">
   <div class="content">
   <header>
-  <h3><a href="/uporabnik/{{stanje}}/denar/" >S klikom naložite ali dvignite denar</a> </h3>
+      <h3>
+        <b>
+          <a href="/uporabnik/{{stanje}}/denar/" > S klikom naložite ali dvignite denar</a>
+        </b>
+      </h3>
   </header>
   </div>
   <div class="content">
   <header>
-  <h3><a href="/uporabnik/{{stanje}}/trgovanje/">Trgujte z delnicami</a> </h3>
+  <h3> 
+    <b>
+      <a href="/uporabnik/{{stanje}}/trgovanje/">Trgujte z delnicami</a> 
+    </b>
+  </h3>
   </header>
   </div>
   
@@ -57,7 +65,7 @@
 %if trans != []:
 <h2> Vaše stanje na računu je {{vrednost}} EUR</h2>
 <div align="left">
-<h5> Vaše transakcije na računu </h5>
+<h4> Vaše transakcije na računu </h4>
 <table>
 <tr>
   <th> ID </th>
@@ -76,7 +84,7 @@
 %end
 %if trans_delnice != []:
 <div align="left">
-<h5> Vaše operacije z delnicami </h5>
+<h4> Vaše operacije z delnicami </h4>
 <table>
 <tr>
   <th> Oznaka delnice </th>
