--- a/views/zacetna_stran.html
+++ b/views/zacetna_stran.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <link rel="stylesheet" type="text/css"  href="/static/main.css">
+    <link rel="stylesheet" type="text/css"  href="{{ROOT}}/static/main.css">
     <meta charset='utf8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <header id='header'>
