--- a/views/denar.html
+++ b/views/denar.html
@@ -33,7 +33,7 @@
 %end
 <div  align="center">
 
-<form action="/uporabnik/{{stanje}}/denar/" class="form text-center" method="POST" style="width: 30%;margin-top: 5cm">
+<form action="{{ROOT}}/uporabnik/{{stanje}}/denar/" class="form text-center" method="POST" style="width: 30%;margin-top: 5cm">
     <span>Količina dviga</span>
     <br>
     <input name='kolicina1' type='integer' value = '0'/> EUR
