--- a/views/prijava.html
+++ b/views/prijava.html
@@ -28,7 +28,7 @@
       <link rel="stylesheet" type="text/css"  href="/static/main.css">
 
 <div align="center">
-<form action='/prijava/' class="form-signin text-center" method='post' style="width: 30%;margin-top: 5cm">
+<form action='{{ROOT}}/prijava/' class="form-signin text-center" method='post' style="width: 30%;margin-top: 5cm">
     <div class="h3 mb-3 font-weight-normal">
     <span>Elektronski naslov:</span><input name='mail' type='text' />
     <br>
